--- a/public/extension/popup.html
+++ b/public/extension/popup.html
@@ -77,7 +77,7 @@
       color: #333;
     }
 
-    .form-group input {
+    .form-group input, .form-group select {
       width: 100%;
       padding: 8px 12px;
       border: 1px solid #ddd;
@@ -86,7 +86,7 @@
       box-sizing: border-box;
     }
 
-    .form-group input:focus {
+    .form-group input:focus, .form-group select:focus {
       outline: none;
       border-color: #1976d2;
       box-shadow: 0 0 0 2px rgba(25, 118, 210, 0.1);
@@ -141,6 +141,7 @@
       display: flex;
       align-items: center;
       margin-bottom: 8px;
+      display: none; /* 隐藏复选框 */
     }
 
     .checkbox-group input[type="checkbox"] {
@@ -201,13 +202,30 @@
       </div>
 
       <div class="form-group">
-        <label for="timestampApiUrl">时间戳API地址</label>
-        <input type="url" id="timestampApiUrl" placeholder="https://api.example.com/timestamp">
+        <label for="sourceLanguage">源语言</label>
+        <select id="sourceLanguage">
+          <option value="auto">自动检测</option>
+          <option value="zh">中文</option>
+          <option value="en">英语</option>
+          <option value="ja">日语</option>
+          <option value="ko">韩语</option>
+          <option value="fr">法语</option>
+          <option value="de">德语</option>
+          <option value="es">西班牙语</option>
+        </select>
       </div>
 
       <div class="form-group">
-        <label for="translationApiUrl">翻译API地址</label>
-        <input type="url" id="translationApiUrl" placeholder="https://api.example.com/translate">
+        <label for="targetLanguage">目标语言</label>
+        <select id="targetLanguage">
+          <option value="zh">中文</option>
+          <option value="en" selected>英语</option>
+          <option value="ja">日语</option>
+          <option value="ko">韩语</option>
+          <option value="fr">法语</option>
+          <option value="de">德语</option>
+          <option value="es">西班牙语</option>
+        </select>
       </div>
 
       <button class="btn" id="saveSettingsBtn">保存设置</button>
